[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Png/driver_cell.png" type="Texture" id=1]
[ext_resource path="res://Assets/Png/items/Driver1.png" type="Texture" id=2]
[ext_resource path="res://Scenes/UI/DriverCell/DriverCell.gd" type="Script" id=3]

[node name="DriverCell" type="TextureButton"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture_normal = ExtResource( 1 )
expand = true
script = ExtResource( 3 )

[node name="Icon" type="TextureRect" parent="."]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 2 )

[connection signal="mouse_entered" from="." to="." method="_on_DriverCell_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_DriverCell_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_DriverCell_pressed"]
